[VEUE-651] fix z-index issue

--- a/app/javascript/style/channel/_layout.scss
+++ b/app/javascript/style/channel/_layout.scss
@@ -5,7 +5,7 @@
   header {
     position: sticky;
     top: 0;
-    z-index: z_index.$default;
+    z-index: z_index.$nav-menu;
   }
 
   .channel-page {
